--- a/Gigabyte/Scenario1_PairingDevice.xaml
+++ b/Gigabyte/Scenario1_PairingDevice.xaml
@@ -47,13 +47,13 @@
 
                 <StackPanel Orientation="Horizontal">
 
-                    <Image x:Name="ImageDevice" Width="74" Height="60" Source="Assets/arduino.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+                    <Image x:Name="ImageArduino" Width="74" Height="60" Source="Assets/arduino.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
 
                     <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
                         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
                             <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="ArduinoName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
                             <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="ArduinoAddress" Text=""/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Device Connected : <Run x:Name="ArduinoConnected" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Connected : <Run x:Name="ArduinoConnected" Text=""/></TextBlock>
                         </StackPanel>
                     </ScrollViewer>
 
