V100 : Initialisation du projet

--- a/Gigabyte/Scenario2_ManagingDevice01.xaml
+++ b/Gigabyte/Scenario2_ManagingDevice01.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Gigabyte.Scenario2_ManagingDevice"
+    x:Class="Gigabyte.Scenario2_ManagingDevice01"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Gigabyte"
@@ -15,21 +15,21 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid x:Name="Arduino" Grid.Row="0">
+        <Grid x:Name="BLEDevice" Grid.Row="0">
 
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing Arduino board (BlockyTalky)</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Managing Micro:bit board (BlockyTalky)</TextBlock>
 
                 <StackPanel Orientation="Horizontal">
 
-                    <Image x:Name="ImageArduino" Width="74" Height="60" Source="Assets/arduino.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+                    <Image x:Name="ImageBLEDevice01" Width="74" Height="60" Source="Assets/BLEDevice01.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
 
                     <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
                         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="ArduinoName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="ArduinoAddress" Text=""/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Connected : <Run x:Name="ArduinoConnected" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="BLEDeviceName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="BLEDeviceAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Connected : <Run x:Name="BLEDeviceConnected" Text=""/></TextBlock>
                         </StackPanel>
                     </ScrollViewer>
 
@@ -47,8 +47,6 @@
                     <Button x:Name="ButtonA" Style="{StaticResource ButtonStyle}" Content="Marche" Click="{x:Bind ButtonA_Click}" Width="60" Height="30" Margin="0,0,10,10" />
                     <Button x:Name="ButtonB" Style="{StaticResource ButtonStyle}" Content="Arrêt" Click="{x:Bind ButtonB_Click}" Width="60" Height="30" Margin="0,0,10,10" />
                 </StackPanel>
-
-
                 
             </StackPanel>
 
