--- a/Gigabyte/Scenario1_PairingDevice.xaml
+++ b/Gigabyte/Scenario1_PairingDevice.xaml
@@ -39,21 +39,21 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Grid x:Name="Arduino" Grid.Row="0">
+        <Grid x:Name="BLEDevice" Grid.Row="0">
 
             <StackPanel Orientation="Vertical" Padding="5,5,5,5">
 
-                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Arduino known</TextBlock>
+                <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">BLE Device known</TextBlock>
 
                 <StackPanel Orientation="Horizontal">
 
-                    <Image x:Name="ImageArduino" Width="74" Height="60" Source="Assets/arduino.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
+                    <Image x:Name="ImageBLEDevice" Width="74" Height="60" Source="Assets/BLEDevice.png" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,5,5" />
 
                     <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" BorderBrush="White" BorderThickness="1" Height="60" Width="175">
                         <StackPanel Orientation="Vertical" Padding="5,5,5,5">
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="ArduinoName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="ArduinoAddress" Text=""/></TextBlock>
-                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Connected : <Run x:Name="ArduinoConnected" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="12">Name : <Run x:Name="BLEDeviceName" Text="" FontStyle="Normal"  FontWeight="Bold"/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Address : <Run x:Name="BLEDeviceAddress" Text=""/></TextBlock>
+                            <TextBlock FontFamily="Segoe UI" FontStyle="Italic" FontWeight="Normal" FontSize="10">Connected : <Run x:Name="BLEDeviceConnected" Text=""/></TextBlock>
                         </StackPanel>
                     </ScrollViewer>
 
@@ -69,7 +69,12 @@
 
                 <TextBlock Style="{StaticResource PageDescriptionTextStyle}" Margin="0,0,0,5" FontWeight="Bold" TextWrapping="Wrap">Enumerate nearby BLE Advertisement</TextBlock>
 
-                <Button x:Name="EnumerateButtonAdvertisement" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind EnumerateButtonAdvertisement_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                <StackPanel Grid.Row="0" Orientation="Horizontal" Padding="5,5,5,5">
+
+                    <Button x:Name="RunEnumerateButtonAdvertisement" Style="{StaticResource ButtonStyle}" Content="Run" Click="{x:Bind RunEnumerateButtonAdvertisement_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+                    <Button x:Name="StopEnumerateButtonAdvertisement" Style="{StaticResource ButtonStyle}" Content="Stop" Click="{x:Bind StopEnumerateButtonAdvertisement_Click}" Width="60" Height="30" Margin="0,0,5,0" />
+
+                </StackPanel>
 
                 <ScrollViewer VerticalScrollMode="Enabled" VerticalScrollBarVisibility="Visible" Grid.Row="1" Margin="0,0,0,5" BorderBrush="White" BorderThickness="1" Height="50">
                     <ListView x:Name="ResultsListViewAdvertisement" ItemTemplate="{StaticResource ResultsListViewAdvertisementTemplate}" ItemsSource="{x:Bind listBluetoothLEDeviceDisplay, Mode=OneWay}" SelectionChanged="ResultsListViewAdvertisement_SelectionChanged" />
